# lenreg-ticket-bot

./: .clineignore  .clinerules  .dockerignore  .dockerignore.public  .env.example  .gitattributes  .gitattributes.public  .gitignore  .pre-commit-config.yaml  .tmp_422.txt  .tmp_diag.py  ARCHITECTURE.md  DEVELOPMENT_HISTORY.md  Dockerfile  GEMINI.md  Makefile  README.md  SESSION_LOG.md  TASK.md  code_review.md  code_review_optimization.md  config.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  stylelint.config.mjs  tasks.ps1  z
.agents/rules/: rules.md
.github/workflows/: ci.yml  release.yml
.roo/commands/: audit.md  check.md  clean.md  commit.md  deploy.md  docs-gen.md  git_push.md  lint.md  session-end.md  test.md
.roo/rules/: .env  .env.example  coding.md  core.md  env.md  ignore.md  knowledge.md  logging.md  restrictions.md  rules.md  standards.md  system_standards.md  vps.md  workflow.md
.roo/sessions/: Gemini_2026-06-15.md  SESSION_ARCHIVE.md  SESSION_LOG.md  TECH_DEBT.md
.roo/tasks/: AGENT_TASKS.md
_design_lab/: calendar-theme.css
_design_lab/calendar-variants/: index.html  shared.css  variant-1-border-accent.html  variant-1b-today-accent-dot.html  variant-1c-today-bg-subtle.html  variant-1d-today-text-accent.html  variant-1e-today-ring-subtle.html  variant-1f-today-underline.html  variant-1g-today-invert.html  variant-1h-today-invert-1px.html  variant-2-border-ring.html  variant-3-minimal-dot.html  variant-4-left-bar.html
_design_lab/gauge/: gauge.js  index.html  styles.css
_design_lab/icon-packs/: index.html  styles.css
_design_lab/icons/: icons.js  index.html  styles.css
_design_lab/icons-svg/: index.html  styles.css
_design_lab/sizes/: index.html  styles.css
_design_lab/stepper/: index.html  live-stepper.js  styles.css  switcher.js
_design_lab/typography/: index.html  styles.css
api/: models.py  zdrav_client.py
data/: bot.db  bot.db-shm  bot.db-wal  doctors.json  users_config.json
data/seed/: clinics_doctors.json
database/: database.py  doctor_manager.py  manager.py  migrations.py
docs/: 2026-06-08-ghost--zdrav-lenreg-code-review.md  AGENT_TASKS.md  ARCHITECTURE.md  CODE_REVIEW.md  GEMINI.md  PROJECT_TREE.md  ROADMAP.md  SESSION_2026-05-01.md  SESSION_2026-05-03.md  SESSION_2026-05-04.md  SESSION_2026-05-05.md  SESSION_2026-05-06.md  SESSION_2026-05-07.md  SESSION_2026-05-08.md  SESSION_2026-05-09.md  SESSION_2026-05-10.md  SESSION_LOG.md  code_review_optimization.md  inline_review_report.md  openapi.yaml  test_branch_review_by_coder.qwen.ai.2026.05.08.18-40.md  варианты оформления.txt
docs/agents/: AGENT_TASKS.md  CODE_REVIEW.md  SESSION_ARCHIVE.md  SESSION_LOG.md  TECH_DEBT.md  formatting_experiments.md  qwen.coder_audit_report_2026-05-20.md  zoo.deepseek_2026-05-20_audit_report.md
docs/design/: api_change_detector_design.md  database_backup_design.md  design-system.md  i18n_design.md  mini_app_deploy.md  mini_app_plan.md  td-utl-004-typeddict-design.md
docs/knowledge/: _INDEX.md  appointment_list.md  check_patient.md  doctor_list.md  speciality_list.md
docs/schemas/: ApiError.json  AppConfig.json  AppointmentListRequest.json  AppointmentListResponse.json  AppointmentSlot.json  CheckPatientData.json  CheckPatientRequest.json  CheckPatientResponse.json  ClinicInfo.json  ClinicItem.json  ClinicListRequest.json  ClinicListResponse.json  DB_Clinic.json  DB_Config.json  DB_Doctor.json  DB_MonitoringEntry.json  DB_Patient.json  DB_SpecialtyAlias.json  DB_User.json  DashboardSummary.json  DateInfo.json  DoctorItem.json  DoctorListRequest.json  DoctorListResponse.json  HealthStatus.json  LogEntry.json  MonitoringLog.json  RateLimitConfig.json  SlotChangeClassification.json  SpecialityItem.json  SpecialityListRequest.json  SpecialityListResponse.json  UserInfo.json
handlers/: common.py  registration.py
keyboards/: inline.py
middleware/: ratelimit.py
plans/: B2_plan.md  calendar-component-spec.md  dashboard-responsive-redesign.md  refactoring-copy-paste-strategy.md
scripts/: apply_city_heuristic.py  apply_heuristic_types.py  backup.sh  backup_healthcheck.sh  check_cities.py  fill_city.py  fix_clinic_types.py  generate_api_schemas.py  install.sh  migrate_configs_to_db.py  restore.sh  run_tests.py  seed_data.py
services/: cleanup.py  doctor_discovery.py  error_notifier.py  healthcheck.py  monitor.py
specs/: ARCHITECTURE.md  ROADMAP.md  openapi.yaml
specs/design/: api_change_detector_design.md  database_backup_design.md  design-system.md  i18n_design.md  mini_app_deploy.md  mini_app_plan.md  web_dashboard_design.md
specs/knowledge/: check_patient.md  clinic_list.md
src/: config.py  main.py
src/api/: __init__.py  exceptions.py  models.py  zdrav_client.py
src/assets/: README.md  utils.py
src/database/: base_repo.py  connection.py  database.py  doctor_manager.py  integrity.py  manager.py  migrations.py  repo_clinics.py  repo_config.py  repo_doctors.py  repo_logs.py  repo_monitoring.py  repo_users.py  seed.py  types.py
src/filters/: __init__.py  admin.py
src/handlers/: callback_parser.py  callbacks.py  common.py  mini_app.py  registration.py
src/i18n/: __init__.py
src/keyboards/: inline.py
src/middleware/: __init__.py  activity.py  error_boundary.py  ratelimit.py  userdata.py
src/services/: __init__.py  background.py  cleanup.py  doctor_discovery.py  error_notifier.py  export.py  healthcheck.py  metrics.py  monitor.py  patient_discovery.py  schema_watcher.py
src/utils/: cache.py  helpers.py  logging.py  proxy_discovery.py  redis.py  telegram_utils.py
src/web/: app.py  auth.py  auth_initdata.py  auth_session.py  dependencies.py
src/web/routers/: api.py  (+5 more)
tests/: conftest.py  test_cache.py  test_database_manager.py  test_doctor_discovery.py  test_doctor_manager.py  test_export.py  test_handlers_common.py  test_handlers_registration.py  test_keyboards.py  test_monitor_classify.py  test_monitor_full.py  test_zdrav_client.py
tests/api/: test_zdrav_client.py
tests/handlers/: test_handlers_common.py  (+1 more)
utils/: cache.py  helpers.py
(+52 files in other folders)
