[project]
name = "lenreg-ticket-bot"
version = "1.0.0"
description = "Telegram-бот для мониторинга доступных талонов (слотов) на портале zdrav.lenreg.ru."
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = "ISC"
authors = [
    { name = "acidmsg" }
]
keywords = ["telegram", "bot", "healthcare", "monitoring", "lenreg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # === Core (Bot & Framework) ===
    "aiogram>=3.7,<4.0",
    # === Configuration ===
    "pydantic-settings>=2.0,<3.0",
    # === Logging ===
    "loguru>=0.7,<1.0",
    # === HTTP & Networking ===
    "httpx>=0.27,<1.0",
    # === Proxy support (SOCKS5) ===
    "aiohttp-socks>=0.9,<1.0",
    # === Data & Storage ===
    "aiofiles>=24.0,<25.0",
    "aiosqlite>=0.22,<1.0",
    "cachetools>=5.3,<6.0",
    "redis>=5.2,<6.0",
    # === Rate Limiting ===
    "aiolimiter>=1.1,<2.0",
    # === Web Dashboard (F5) ===
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "jinja2>=3.1,<4.0",
    # === Date/Time utilities ===
    "python-dateutil>=2.9,<3.0",
    # === Error Notifications (M2) ===
    "sentry-sdk>=2.0,<3.0",
    # === Metrics & Monitoring ===
    "prometheus-client>=0.20,<1.0",
    # === Vector Search (Qdrant) ===
    "qdrant-client>=1.9,<2.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
# === Testing ===
pytest = ">=9.0,<10.0"
pytest-asyncio = ">=1.3,<2.0"
# === Linting & Formatting ===
ruff = ">=0.4,<1.0"
mypy = ">=1.10,<2.0"
types-aiofiles = ">=24.0,<26.0"
types-cachetools = ">=5.3,<8.0"
fakeredis = {extras = ["lua"], version = ">=2.30,<3.0"}
# === i18n ===
babel = ">=2.14,<3.0"
# === Pre-commit ===
pre-commit = ">=4.0,<5.0"
pre-commit-hooks = ">=6.0,<7.0"
types-python-dateutil = "^2.9.0.20260518"

[tool.ruff]
src = ["src"]
target-version = "py311"
exclude = [".venv", "data", "logs"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "ASYNC", "N", "B", "UP", "SIM", "RUF"]
ignore = [
    "RUF001", # Разрешить кириллицу в обычных строках (String contains ambiguous Unicode character)
    "RUF002", # Разрешить кириллицу в докстрингах (Docstring contains ambiguous Unicode character)
    "RUF003", # Разрешить кириллицу в комментариях (Comment contains ambiguous Unicode character)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
packages = ["src", "scripts", "tests"]
exclude = [".venv", "data", "logs"]
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.test_handlers_registration"
disable_error_code = ["union-attr", "attr-defined"]
[[tool.mypy.overrides]]
module = "tests.test_handlers_common"
disable_error_code = ["union-attr", "attr-defined"]

[[tool.mypy.overrides]]
module = "src.web.routers.backup_api"
disable_error_code = ["attr-defined"]


[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
pythonpath = ["."]
filterwarnings = [
    # pytest-asyncio использует устаревшие asyncio.set_event_loop_policy /
    # get_event_loop_policy, удаляемые в Python 3.16 (известная проблема)
    "ignore::DeprecationWarning:pytest_asyncio.*",
    "ignore::pytest.PytestDeprecationWarning",
]
